Correct W3C error, bottom is not text-align value.

--- a/web_static/styles/101-places.css
+++ b/web_static/styles/101-places.css
@@ -70,7 +70,6 @@ section.places h1 {
 	margin-top: 5px;
 	line-height: 10px;
 	width: 100px;
-	text-align: bottom;
 	background-repeat: no-repeat;
 	background-position: top;
 }
